[tool.poetry]
name = "better-text"
version = "0.1.0"
description = ""
authors = ["Ebigide Jude <judmc.26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mydependency = "^0.0.0"
requests = "^2.31.0"
openai = "^1.13.3"
pinecone-client = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
